# TicTacCore

./: .gitignore  Makefile  README.md
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
Game/: CMakeLists.txt
Game/Source/: main.cpp
Game/Source/Core/: Input.cpp  Input.h  InputHandler.h  Object.h  World.cpp  World.h
Game/Source/Input/: PlayerInput.h
Game/Source/Objects/: GameMaster.cpp  GameMaster.h  Test.cpp  Test.h
Game/Source/Rendering/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
